--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This cube was originally published on the Spanish site http://elblogdepicodev.blogspot.com/2010/03/arch-linux-cheat-cube.html.
+This cube should help git users like me finding the right git commands.
 
-In the git you find translations to German and English.
+It is currently work in progress.
